@@ -87,8 +87,10 @@ kbd {
 	off_threshold = 40
 	# enable/disable automatic backlight
 	auto = yes
-	# idle timer - switches off keyboard backlight automatically (timeout in seconds, -1 to disable)
+	# idle timer - fades keyboard backlight automatically (timeout in seconds, -1 to disable)
 	idle_timer = 60
+	# idle level - level to fade keyboard to after idle_timer seconds. Defaults to switching off.
+	# idle_level = 20
 }
 
 # CD/DVD drive ejection
